fixed: form not centered on small screens, https://github.com/kobotoolbox/enketo-core/issues/28

--- a/src/sass/unga-grid/_form_header.scss
+++ b/src/sass/unga-grid/_form_header.scss
@@ -29,12 +29,6 @@ body {
     }
 }
 
-.main .paper > form {
-    max-width: 960px;
-    padding: 30px;
-    margin: 0 auto;
-}
-
 h3#form-title {
     position: absolute;
     left: 50%;
